<resources>
    <string name="app_name">teste_fernando_rubini</string>
    <string name="hello_maria">Olá, Maria</string>
    <string name="txt_main_text_products">Produtos</string>
    <string name="error">Ocorreu um erro. Tente novamente.</string>
    <string name="logo">Logo</string>
    <string name="digio_cash">digio Cash</string>
    <string name="digio_cash_banner">Digio Cash banner</string>
    <string name="try_again">Tentar novamente</string>
    <string name="caution">Atenção!</string>
    <string name="ok_understand">OK, entendi</string>
    <string name="remote_config_success">os parametros do Remote Config foram atualizados</string>
    <string name="remote_config_fail">os falha ao atualizar os parametros do Remote Config</string>
    <string name="continue_button">Continuar</string>
    <string name="do_you_not_sign_in">Não é cadastrado?</string>
    <string name="sigin_now">Cadastre-se</string>
    <string name="fill_in_your_password">Preencha sua senha</string>
    <string name="fill_your_email">Preencha o e-mail</string>
    <string name="err_email">Endereço de e-mail inválido.</string>
    <string name="tilte_aplication">Seu aplicativo de recargas</string>
    <string name="sub_title_aplication">Pague de forma fácil e segura</string>
    <string name="start_register">Iniciar Cadastro</string>
    <string name="already_registered">Já sou cadastrado</string>
    <string name="register_title"><b>Dados Pessoais</b></string>
    <string name="register_name"><b>Nome Completo</b></string>
    <string name="register_fullname"><b>Nome Completo</b></string>
    <string name="register_continue">Digite seu nome</string>
    <string name="register_cpf">CPF</string>
    <string name="register_numeral">000.000.000-00</string>
    <string name="register_cellphone">Celular</string>
    <string name="register_cellnumber">00 00000-0000</string>
    <string name="register_email"><b>E-mail</b></string>
    <string name="register_emailpersonal">Digite seu e-mail</string>
    <string name="register_privacy">Ao clicar em Continuar, seus dados pessoais\n serão tratados de acordo com a nossa\n<b>Política de Privacidade</b></string>
    <string name="register_continuebutton">Continuar</string>
    <string name="register_password">Digite sua senha</string>
    <string name="enter_in_your_password">Preencha sua senha!</string>
    <string name="fill_in_your_email">Preencha o seu email!</string>
    <string name="fill_in_your_phone">Preencha o seu telefone!</string>
    <string name="fill_in_your_cpf">Preencha o seu CPF!</string>
    <string name="invalid_cpf">CPF inválido!</string>
    <string name="email_is_already_registered">E-mail já cadastrado</string>
    <string name="enter_a_strong_password">Digite uma senha forte</string>
    <string name="email_invalidate">E-mail inválido</string>
    <string name="invalid_phone_number">Dados de telefone inválidos. Digite novamente.</string>
    <string name="fill_in_your_name">Preencha o seu nome!</string>
    <string name="enter_your_full_name">Digite seu nome completo</string>
    <string name="registration_completed_successfully">Cadastro realizado com sucesso</string>
    <string name="error_when_filling_out_the_registration">Erro ao preencher o cadastro</string>
    <string name="opened_recaptcha">Abriu o reCaptcha</string>
    <string name="users">Usuarios</string>
    <string name="success_register"><b>Cadastro realizado\n com sucesso!</b></string>
    <string name="success_digio">Você já pode começar\n a usar o seu Digio!</string>
    <string name="success_start">Começar</string>

</resources>
